--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "gatsby": "^5.12.4",
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-image": "^3.12.1",
+    "gatsby-plugin-manifest": "^5.13.0",
     "gatsby-plugin-netlify": "^5.1.1",
+    "gatsby-plugin-offline": "^6.13.0",
     "gatsby-plugin-react-helmet": "^6.12.0",
     "gatsby-plugin-sharp": "^5.12.1",
     "gatsby-plugin-smoothscroll": "^1.2.0",
