--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.12.4",
     "gatsby-omni-font-loader": "^2.0.2",
+    "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-image": "^3.12.1",
     "gatsby-plugin-manifest": "^5.13.0",
     "gatsby-plugin-netlify": "^5.1.1",
