--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/rubik": "^5.0.15",
     "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.12.4",
+    "gatsby-adapter-netlify": "^1.1.1",
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-image": "^3.12.1",
